fixed collapse header

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -30,7 +30,7 @@ $collapse-content-bg: $white;
       position: relative;
       padding: $collapse-header-padding;
       padding-left: $collapse-header-padding-extra;
-      color: $heading-color;
+      color: $black;
       line-height: 22px;
       cursor: pointer;
       transition: all 0.3s;
